# BEAM-LongHorizonMemBench

./: .dockerignore  .env.example  .gitignore  README.md  ms-list.md  pyproject.toml
configs/: cost_weights.yaml  judge_rubric.md  pilot.yaml  systems-v2.lock.yaml  systems.lock.yaml  vertical_offline_pilot.yaml  wide_research.yaml
configs/experiments/: mem0_controlled_zen.yaml  mem0_qualification.yaml  systems_controlled_gpt_only.yaml  systems_controlled_gpt_only_aaai.yaml  systems_controlled_gpt_only_horizon_v012.yaml  systems_controlled_gpt_only_longitudinal_v013.yaml  systems_controlled_gpt_only_longitudinal_v013_shengsuanyun_writer.yaml  systems_controlled_gpt_only_longitudinal_v014_shengsuanyun_writer.yaml  systems_controlled_gpt_only_matched_v011.yaml  systems_controlled_three_policy_longitudinal_v013.yaml  systems_controlled_three_policy_longitudinal_v013_shengsuanyun.yaml  systems_controlled_three_policy_longitudinal_v013_shengsuanyun_direct_writer.yaml  systems_controlled_zen.yaml
configs/models/: bge-m3.yaml  bge-reranker-v2-m3.yaml  claude-opus-4-8-shengsuanyun.yaml  claude-opus-4-8-zen.yaml  claude-opus-4-8.yaml  deepseek-v4-pro-shengsuanyun.yaml  deepseek-v4-pro-writer-shengsuanyun.yaml  deepseek-v4-pro-writer.yaml  deepseek-v4-pro.yaml  gpt-5.6-sol-shengsuanyun.yaml  gpt-5.6-sol-zen.yaml  gpt-5.6-sol.yaml
constraints/: mem0.lock.txt
deploy/: compose.mem0.yaml  compose.systems.yaml  native-runtime.lock.yaml
deploy/locks/: README.md  amem-requirements.txt  mem0-requirements.txt  memos-requirements.txt
deploy/slurm/: mem0_preflight.sbatch  mem0_qualification.sbatch  systems_evaluate_task.sbatch  systems_qualification.sbatch  systems_report.sbatch
docker/: amem-worker.Dockerfile  core-worker.Dockerfile  graphiti-compose.yml  mem0-worker.Dockerfile  memos-worker.Dockerfile
docker/locks/: amem-requirements.txt  amem-wheelhouse-manifest.json  memos-requirements.txt  memos-wheelhouse-manifest.json
docs/: aaai-experiment-protocol.md  autoresearch_wide.md  extending.md  long-horizon-benchmark-contract.md  mem0-server-workflow.md  memory_system_selection.md  memory_systems_2026_survey.md  online-long-horizon-execution-track.md  paper-contribution-positioning-zh.md  project_timeline_report.md  systems-server-workflow.md
scripts/: bootstrap_server.sh  bootstrap_systems_server.sh  build_offline_bundle.sh  preflight_mem0.sh  preflight_systems.sh  run_mem0_qualification.sh  run_mem0_smoke.sh  run_systems_qualification.sh  run_systems_smoke.sh  verify_system_images.sh  verify_system_runtime.sh
scripts/lib/: mem0_common.sh  systems_common.sh  systems_services.sh
spec/: 01-overview-zh.md  01-overview.md  02-metrics-zh.md  02-metrics.md  03-protocol-zh.md  03-protocol.md  04-datasets-zh.md  04-datasets.md  05-systems-zh.md
src/: 05-systems.md
src/lhmsb/: __init__.py  hashing.py  pilot.py  rng.py  types.py
tests/: test_agent_providers.py  test_cost.py  test_harness.py  test_hashing.py  test_judge.py  test_pilot_smoke.py  test_sim_core.py  test_smoke.py  test_types.py
tests/adapters/: test_flat_retrieval.py
tests/analysis/: test_stats.py
tests/contract/: __init__.py  adapter_contract.py  test_builtin_adapters.py  test_cognee.py  test_graphiti.py  test_letta.py  test_mem0.py  test_mem0_qualification.py  test_stub.py
tests/datasets/: test_mem0_stateful_pipeline.py  test_pipeline.py  test_stateful_loader.py  test_stateful_pipeline.py
tests/experiments/: conftest.py  test_vertical_cli.py  test_vertical_config.py  test_vertical_experiment_runner.py  test_vertical_runner.py
tests/families/: test_research.py  test_research_metadata_index.py  test_research_wide.py  test_research_wide_trace.py  test_software.py  test_software_horizon_panel.py  test_software_longitudinal_trajectory.py  test_software_matched_constructs.py  test_software_mem0_vertical.py  test_software_vertical.py
tests/fixtures/: wide_research_history.jsonl
tests/longhorizon/: test_attribution.py  test_constructs.py  test_failure_attribution.py  test_interventions_and_drift.py  test_online_execution.py  test_public_surface.py  test_render_and_checker.py  test_schema_replay.py  test_task_span.py  test_vertical_runner.py  (+1 more)
(+204 files in other folders)
