[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lhmsb"
version = "0.1.0"
description = "LongHorizonMemSysBench: evaluate AI memory-management systems over long, multi-session agentic tasks"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "BEAM Research" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6",
    # Agent harness (task 9): graph API only; built-in checkpointer/persistence stays disabled.
    "langgraph>=0.2",
    "langchain-core>=0.3",
    # Scorecard Pareto plots (task 24): headless Agg backend only.
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.8",
    "mypy>=1.14",
]
# Optional: lhmsb.cost.count_tokens uses tiktoken when present, else a fallback.
tokenizers = [
    "tiktoken>=0.7",
]
metadata = [
    "duckdb>=1.3,<2",
]
# ChromaDB baseline (lhmsb.adapters.chroma): embedded, offline, no model download.
chroma = [
    "chromadb>=0.5",
]
# Mem0 hybrid-memory adapter (lhmsb.adapters.mem0_adapter): imported lazily, so not
# required for mocked tests; live test (LHMSB_LIVE_MEM0=1) needs mem0ai + API keys.
mem0 = [
    "mem0ai==2.0.12",
]
# Server qualification runtime. Provider and service clients remain lazily imported,
# so the default development environment stays lightweight.
qualification = [
    "anthropic>=0.64,<1",
    "duckdb>=1.3,<2",
    "httpx>=0.27,<1",
    "mem0ai==2.0.12",
    "openai>=1.100,<3",
    "pandas>=2.2,<3",
    "pyarrow>=19,<22",
    "pytest>=8",
    "qdrant-client>=1.15,<2",
]
# Graphiti/Zep temporal-KG adapter (lhmsb.adapters.graphiti_adapter): imported lazily,
# so not required for mocked tests; live test (LHMSB_LIVE_GRAPHITI=1) needs a graph DB.
graphiti = [
    "graphiti-core>=0.3",
]
# Letta self-editing-block adapter (lhmsb.adapters.letta_adapter): client SDK imported
# lazily, so not required for mocked tests; live test (LHMSB_LIVE_LETTA=1) needs a Letta
# server. ai-memory-sdk is the native surface; letta-client is the REST fallback.
letta = [
    "ai-memory-sdk>=0.1",
    "letta-client>=0.1",
]
# Cognee self-reorganizing triple-store adapter (lhmsb.adapters.cognee_adapter): imported
# lazily, so not required for mocked tests; live test (LHMSB_LIVE_COGNEE=1) needs cognee +
# an LLM/embedder backend. Uses zero-infra file-based defaults (LanceDB + Kuzu + SQLite).
cognee = [
    "cognee>=0.1",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
lhmsb = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["lhmsb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
show_column_numbers = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
follow_imports_for_stubs = true
exclude = ["build/", "dist/", ".venv/"]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--cov=lhmsb",
    "--cov-report=term-missing",
]
